[tool.poetry]
name = "octopus-client"
version = "0.1.0"
description = ""
authors = ["Aaron Carson <aaron@aaroncarson.co.uk>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
gql = {extras = ["all"], version = "^3.4.0"}
Pygments = "^2.13.0"
falcon = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
